# 2D_Game_Engine

./: CMakeLists.txt  README.md  build.sh  make.sh  run.sh
include/: Engine.h  GameObject.h  Renderer.h  Scene.h  Texture.h  Window.h
src/: Engine.cpp  GameObject.cpp  Renderer.cpp  Scene.cpp  Texture.cpp  Window.cpp  main.cpp
